--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="exports/v0.0.3/grapplelord_remake.exe"
+export_path="exports/v0.0.4_wake/grapplelord_remake.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
