--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="exports/v0.0.4_wake/grapplelord_remake.exe"
+export_path="exports/v0.0.6_multiplayer/grapplelord_multiplayer.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -39,8 +39,8 @@ application/modify_resources=true
 application/icon=""
 application/console_wrapper_icon=""
 application/icon_interpolation=4
-application/file_version="0.0.3"
-application/product_version="0.0.3"
+application/file_version="0.0.45"
+application/product_version="0.0.45"
 application/company_name="itspacchu"
 application/product_name="grapple_lord"
 application/file_description=""
@@ -74,7 +74,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="exports/v0.0.6_multiplayer/grapplelord_multiplayerforward.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -86,7 +86,7 @@ script_encryption_key=""
 custom_template/debug=""
 custom_template/release=""
 debug/export_console_script=1
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 texture_format/bptc=true
 texture_format/s3tc=true
 texture_format/etc=false
