--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="exports/v0.0.6_multiplayer/grapplelord_multiplayer.exe"
+export_path="exports/v0.0.7_multiplayer/grapplelord_multiplayer_opengl_windows_v0.0.6.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -74,7 +74,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="exports/v0.0.6_multiplayer/grapplelord_multiplayerforward.x86_64"
+export_path="exports/v0.0.7_multiplayer/grapplelord_multiplayer_linux_v0.0.6.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
